--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
-name = "api"
-# node_compat = true
-compatibility_date = "2023-12-01"
+name = "backend"
 main = "src/index.ts"
+compatibility_date = "2024-10-23"
+compatibility_flags = [ "nodejs_compat" ]
 
 # [vars]
 # MY_VAR = "my-variable"
@@ -21,3 +21,7 @@ main = "src/index.ts"
 
 # [ai]
 # binding = "AI"
+
+# [observability]
+# enabled = true
+# head_sampling_rate = 1
