--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,5 @@
-name = "backend"
+# wrangler.toml
+name = 'cloudflare'
 main = "src/index.ts"
 compatibility_date = "2024-10-23"
 compatibility_flags = [ "nodejs_compat" ]
