--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,12 @@ name = 'cloudflare'
 main = "src/index.ts"
 compatibility_date = "2024-10-23"
 compatibility_flags = [ "nodejs_compat" ]
+# wrangler.toml (wrangler v3.88.0^)
+[observability.logs]
+enabled = true
+
+
+
 
 # [vars]
 # MY_VAR = "my-variable"
